kubernetes/kustomizations/velero/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
